[package]
name = "launchxl-cc13x0"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[[bin]]
name = "launchxl-cc13x0"
path = "src/main.rs"

[[bin]]
name = "launchxlccfg-cc13x0"
path = "src/ccfg.rs"

[dependencies]
cortexm3 = { path = "../../arch/cortex-m3" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
cc26x0 = { path = "../../chips/cc26x0" }
